# MetalRendder

./: LICENSE.md  README.md  SECURITY.md
MetalRender/: LICENSE.md  build.gradle  gradle.properties
MetalRender/src/client/java/com/metalrender/: MetalRenderClient.java  MetalRenderMod.java
MetalRender/src/client/java/com/metalrender/nativebridge/: MetalBackend.java  MetalHardwareChecker.java  NativeMemory.java
MetalRender/src/client/java/com/metalrender/sodium/: MetalRendererBackend.java
MetalRender/src/client/java/com/metalrender/sodium/mixin/: SodiumRendererMixin.java
MetalRender/src/client/resources/: fabric.mod.json
MetalRender/src/main/native/: build_native.sh  metalrender.m
metalrender ALPHA/: LICENSE.md  build.gradle  gradle.properties  settings.gradle
metalrender ALPHA/src/client/java/pebblesboon/metalrender/: MetalRenderClient.java  MetalRenderer.java  MetalRuntime.java  Platform.java
metalrender ALPHA/src/client/java/pebblesboon/metalrender/bridge/: ChunkFormats.java  MetalBridge.java
metalrender ALPHA/src/client/java/pebblesboon/metalrender/mixins/: GameRendererHookMixin.java  RendererMixin.java  SodiumChunkDeleteMixin.java  SodiumChunkUploadMixin.java  SodiumRegionDeleteMixin.java  SodiumRegionUploadMixin.java  SodiumRendererSwapMixin.java
metalrender ALPHA/src/main/resources/: metalrender.mixins.json
metalrender ALPHA/src/main/resources/assets/metalrender/shaders/: fullscreen.vert
metalrender ALPHA/src/native/: CMakeLists.txt  MetalRender.h  MetalRender.mm  metarender_native.mm
(+1 files in other folders)
